@@ -54,7 +54,7 @@ def dispatch(host, port, protocol, database_name, user, session, object_type,
         elif method == 'version':
             return VERSION
         elif method == 'timezone_get':
-            return time.tzname[0]
+            return CONFIG['timezone']
         elif method == 'list_lang':
             return [
                 ('bg_BG', 'Български'),
